css/dest/wcasia-2020.css
/* ... */
/* CONTENT
---------------------------------------*/
.entry-header {
  text-align: center; }
  @media screen and (min-width: 1024px) {
    .entry-header .entry-image {
      margin-left: -10rem;
      margin-right: -10rem; } }

.entry-title {
  color: #E63331;
  margin-bottom: 1rem;
  font-size: 1.953em; }

.page .entry-header, .single .entry-header {
  margin: 0 -1.5rem 2.5rem -1.5rem; }

.page .entry-title, .single .entry-title {
  font-size: 2.441em; }

.entry-meta {
  font-size: 0.875em; }
  .home .entry-meta .byline {
    display: inline; }

.entry-content {
  margin: 1.5rem 0; }
  .entry-content h2 {
    font-size: 1.953em; }
  .entry-content h3 {
    font-size: 1.563em; }
  .entry-content h4 {
    font-size: 1.25em; }
  .entry-content h2, .entry-content h3, .entry-content h4 {
    margin-bottom: 1.5rem; }
  .entry-content ul, .entry-content ol {
    margin: 0 0 1.5em 0; }
  .entry-content a.more-link {
    padding: .5rem 1rem;
    background: #E63331;
    color: #fff; }
  .entry-content .has-small-font-size {
    font-size: .8125em;
    line-height: 1.5; }
  .entry-content .has-medium-font-size {
    font-size: 1.25em;
    line-height: 1.6; }
  .entry-content .alignfull {
    margin-left: calc( -100vw / 2 + 100% / 2);
    margin-right: calc( -100vw / 2 + 100% / 2);
    max-width: 100vw; }
  .entry-content .alignwide {
    margin-left: -1.5rem;
    margin-right: -1.5rem;
    max-width: 960px; }
  .entry-content .wp-block-image {
    margin-bottom: 2.5rem; }
  .entry-content .wp-block-separator {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem; }
  .entry-content .wp-block-button.aligncenter {
    margin-bottom: 1.5em; }
  .entry-content .wp-block-button__link {
    font-size: 2em;
    font-weight: 600;
    padding: 15px 35px; }
  .entry-content .wp-block-quote.is-large p, .entry-content .wp-block-quote.is-style-large p {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem; }

.entry-content a:hover,
.page-content a:hover {
  border-bottom: 1px solid #E63331; }

.hentry {
  margin-bottom: 2.5rem;
  padding-bottom: 2.5rem;
  position: relative; }
  .hentry::after {
    background-color: #eee;
    content: "";
    display: block;
    height: 1px;
    width: 100%;
    position: absolute;
    bottom: 0; }

.entry-footer .comments-link {
  margin-right: 1rem; }
  .entry-footer .comments-link a {
    padding-bottom: 0.25em;
    border-bottom: 1px dotted #0D5ABC; }

.entry-footer .edit-link a {
  padding-bottom: 0.25em;
  border-bottom: 1px dotted #0D5ABC; }

/* POST NAVIGATION
---------------------------------------*/
.site-main .post-navigation .nav-previous, .site-main .posts-navigation .nav-previous {
  font-size: 0.875rem;
  line-height: 1.4;
  width: calc(50% - 1rem); }
  .site-main .post-navigation .nav-previous a, .site-main .posts-navigation .nav-previous a {
    position: relative;
    padding-top: 1.5rem;
    display: block; }
    .site-main .post-navigation .nav-previous a:before, .site-main .posts-navigation .nav-previous a:before {
      content: "\f104";
      margin-right: .5em;
      color: #E63331;
      display: inline-block;
      font-family: FontAwesome;
      font-size: 1rem;
      font-weight: 300; }

.site-main .post-navigation .nav-next, .site-main .posts-navigation .nav-next {
  font-size: 0.875rem;
  line-height: 1.4;
  width: calc(50% - 1rem); }
  .site-main .post-navigation .nav-next a, .site-main .posts-navigation .nav-next a {
    position: relative;
    padding-top: 1.5rem;
    display: block; }
    .site-main .post-navigation .nav-next a:after, .site-main .posts-navigation .nav-next a:after {
      content: "\f105";
      margin-left: .5em;
      color: #E63331;
      display: inline-block;
      font-family: FontAwesome;
      font-size: 1rem;
      font-weight: 300; }

/* COMMENTS
---------------------------------------*/
.comments-area {
  margin-top: 2.5rem; }

.comments-title {
  font-size: 1em;
  margin-bottom: 1rem; }

ol.comment-list {
  margin: 0 0 1.5em 0;
  padding: 0;
  list-style: none; }
  ol.comment-list > .comment {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    border-bottom: 1px solid #eee; }
  ol.comment-list .pingback {
    font-size: .9375rem;
    line-height: 1.5; }

ol.children {
  margin-left: 1rem;
  padding-left: 0;
  list-style: none; }

article.comment-body {
  position: relative;
  padding-left: 0;
  margin-bottom: 1.5rem; }
  article.comment-body .comment-author {
    display: block;
    font-size: .8em;
    line-height: 1.5; }
    article.comment-body .comment-author .avatar {
      position: absolute;
      top: 0;
      left: 0;
      margin-bottom: 0; }
    article.comment-body .comment-author b.fn {
      font-weight: 600;
      margin-left: 3rem; }
      article.comment-body .comment-author b.fn a {
        color: #E63331; }
    article.comment-body .comment-author .says {
      display: none; }
  article.comment-body .comment-metadata {
    font-size: .64em;
    line-height: 1.4;
    margin-left: 3.25rem; }
    article.comment-body .comment-metadata a {
      color: #E63331; }
  article.comment-body .comment-content {
    margin-top: .5rem;
    padding: 1.5rem;
    background: #fafafa; }
    article.comment-body .comment-content p:last-child {
      margin-bottom: 0; }
  article.comment-body .reply {
    margin-top: .5rem;
    font-size: .8em; }

.comment-respond {
  padding: 1.5rem;
  background: #f8f8f8; }
  .comment-respond .comment-reply-title {
    font-size: 1.25em; }
  .comment-respond .comment-notes {
    font-size: .875rem;
    line-height: 1.4;
    color: #0D5ABC; }
  .comment-respond .required {
    color: #E63331; }
  .comment-respond .comment-form label {
    font-size: .875rem;
    color: #36393B;
    text-transform: uppercase;
    font-weight: 500; }
  .comment-respond .comment-form p {
    margin-bottom: 1rem; }
    .comment-respond .comment-form p:last-child {
      margin-bottom: 0; }
/* ... */

